examples/test/testpolicy10166.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10166
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key32: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value38
          key7: value17
      podSelector:
        matchLabels:
          key26: value46
          key48: value13
          key13: value4
